.vendor/dislin/examples/ch/dislin.h

void  freeptr (void *p);
void  incfil (const char *cfil);
void  incmrk (int nmrk);
int   indrgb (double xr, double xg, double xb);
void  intax  (void);
int   intcha (int nx, char *cstr);
int   intlen (int nx);
int   intrgb (double xr, double xg, double xb);
int   intutf (const int *iray, int n, char *cstr, int nmax);
void  isopts (const double *xray, int nx, const double *yray, int ny, 
              const double *zray, int nz, const double *wmat, double wlev,
              double *xtri, double *ytri, double *ztri, int nmax, int *ntri);
void  itmcat (char *clis, const char *cstr);
int   itmcnt (const char *clis);
void  itmncat (char *clis, int nmx, const char *cstr);
char  *itmstr (const char *clis, int nlis);
void  jusbar (const char *copt);
void  labclr (int iclr, const char *copt);
void  labdig (int ndig, const char *cax);
void  labdis (int ndis, const char *cax);
void  labels (const char *clab, const char *cax);
void  labjus (const char *copt, const char *cax);
void  labl3d (const char *copt);
void  labmod (const char *ckey, const char *cval, const char *cax);
void  labpos (const char *cpos, const char *cax);
void  labtyp (const char *ctyp, const char *cax);
int   ldimg  (const char *cfil, unsigned short *iray, int nmax, int nc);
void  legbgd (int iclr);
void  legclr (void);
void  legend (const char *cbuf, int ncor);
void  legini (char *cbuf, int nlin, int nmaxln);
void  leglin (char *cbuf, const char *cstr, int ilin);
void  legopt (double x1, double x2, double x3);
void  legpat (int ityp, int ithk, int isym, int iclr, long ipat, int ilin);
void  legpos (int nx, int ny);
void  legtbl (int i, const char *copt);
void  legtit (const char *cstr);
void  legtyp (const char *copt);
void  legval (double x, const char *copt);
void  lfttit (void);
void  licmod (const char *cmod, const char *ckey);
void  licpts (const double *xv, const double *yv, int nx, int ny, 
              const int *itmat, int *iwmat, double *wmat);
 
void  light  (const char *copt);
void  linclr (const int *nray, int n);
void  lincyc (int index, int ityp);
void  line   (int nx, int ny, int nu, int nv);
void  linesp (double xfac);
void  linfit (const double *x, const double *y, int n,
              double *a, double *b, double *r, const char *copt);
void  linmod (const char *cmod, const char *ckey);
void  lintyp (int ntyp);
void  linwid (int i);
void  litmod (int id, const char *copt);
void  litop3 (int id, double xr, double xg, double xb, const char *copt);
void  litopt (int id, double xval, const char *copt);
void  litpos (int id, double x, double y, double z, const char *copt);
void  lncap  (const char *copt);
void  lnjoin (const char *copt);
void  lnmlt  (double x);
void  logtic (const char *cmod);
void  mapbas (const char *cmod);
void  mapfil (const char *cfil, const char *copt);
void  mapimg (const char *cfil, double x1, double x2, double x3, double x4,
              double x5, double x6);
void  maplab (const char *copt, const char *ckey);
void  maplev (const char *cmod);
void  mapmod (const char *cmod);
void  mappol (double xpol, double ypol);
void  mapopt (const char *copt, const char *ckey);
void  mapref (double ylower, double yupper);
void  mapsph (double xrad);
void  marker (int nsym);
void  matop3 (double xr, double xg, double xb, const char *copt);
void  matopt (double xval, const char *copt);
void  mdfmat (int nx, int ny, double weight);
void  messag (const char *cstr, int nx, int ny);
void  metafl (const char *cstr);
void  mixalf (void);
void  mixleg (void);
void  mpaepl (int i);
void  mplang (double x);
void  mplclr (int nbg, int nfg);
void  mplpos (int nx, int ny);
void  mplsiz (int nsize);
int   trmlen (const char *cstr);