.vendor/dislin/julia/Dislin.jl


function incfil(s::String)
  ccall((:incfil, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function incmrk(i::Int64)
  ccall((:incmrk, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function indrgb(x1::Float64, x2::Float64, x3::Float64)
  n = ccall((:indrgb, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
              x1, x2, x3)
  return convert(Int64, n)
end

function intax()
  ccall((:intax, "libdislin_d.so"), Cvoid, ())
end

function intcha(i::Int64)
  s = Array{UInt8}(undef, 80)
  n = ccall((:intcha, "libdislin_d.so"), Int32, (Int32, Ptr{UInt8}), 
              i, s)
  n = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  resize!(s, n)
  GC.@preserve s
  return unsafe_string(pointer(s))
end

function intlen(i::Int64)
  n = ccall((:intlen, "libdislin_d.so"), Cvoid, (Int32, ), i)
  return convert(Int64, n)
end

function intrgb(x1::Float64, x2::Float64, x3::Float64)
  n = ccall((:intrgb, "libdislin_d.so"), Int32, (Float64, Float64, Float64), 
              x1, x2, x3)
  return convert(Int64, n)
end

function intutf(iray::Vector{Int32}, n::Int64)
  s = Array{UInt8}(undef, n * 4 + 1)
  ccall((:intutf, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Int32, Ptr{UInt8}, Int32), iray, n, s, n * 4)
  m = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  resize!(s, m)
  GC.@preserve s
  return unsafe_string(pointer(s))
end

function isopts(xray::Vector{Float64}, nx::Int64, yray::Vector{Float64},
                ny::Int64, zray::Vector{Float64}, nz::Int64, 
                wmat::Array{Float64, 3}, wlev::Float64,
                xtri::Vector{Float64}, ytri::Vector{Float64},
                ztri::Vector{Float64}, nmax::Int64)
  w = transpose(wmat)
  ntri = Cint[0]

  n = ccall((:isopts, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, 
          Ptr{Float64}, Int32, Ptr{Float64}, Int32, Ptr{Float64}, Float64,
          Ptr{Float64}, Ptr{Float64}, Ptr{Float64}, Int32, Ptr{Cint}), 
          xray, nx, yray, ny, zray, nz, w, wlev, xtri, ytri, ztri, nmax, nzti)
  w = 0
  return convert(Int64, ntri[1])
end

function itmcat(s1::String, s2::String)
  n1 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s1)
  n2 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s2)
  s = Array{UInt8}(undef, n1 + n2 + 2)
  for i = 1:n1
    s[i] = s1[i]
  end
  s[n1+1] = 0
  ccall((:itmcat, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s, s2)
  GC.@preserve s
  return unsafe_string(pointer(s))
end

function itmcnt(s::String)
  n = ccall((:itmcnt, "libdislin_d.so"), Int32, (Ptr{UInt8},), s)
  return convert(Int64, n)
end

function itmncat(s1::String, nmax::Int64, s2::String)
  n1 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s1)
  n2 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s2)
  s = Array{UInt8}(undef, n1 + n2 + 2)
  for i = 1:n1
    s[i] = s1[i]
  end
  s[n1+1] = 0
  ccall((:itmncat, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Int32, Ptr{UInt8}), 
          s, nmax, s2)
  GC.@preserve s
  return unsafe_string(pointer(s))
end

function itmstr(s::String, i::Int64)
  p = ccall((:itmstr, "libdislin_d.so"), Cstring, (Ptr{UInt8}, Int32), s, i)
  val = bytestring(p)
  ccall((:freeptr, "libdislin_d.so"), Cvoid, (Cstring, ), p)
  return val
end

function jusbar(s::String)
  ccall((:jusbar, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function labclr(i::Int64, s::String)
  ccall((:labclr, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function labdig(i::Int64, s::String)
  ccall((:labdig, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function labdis(i::Int64, s::String)
  ccall((:labdis, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function labels(s1::String, s2::String)
  ccall((:labels, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function labjus(s1::String, s2::String)
  ccall((:labjus, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function labl3d(s::String)
  ccall((:labl3d, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function labmod(s1::String, s2::String, s3::String)
  ccall((:labmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}, Ptr{UInt8}),
           s1, s2, s3)
end

function labpos(s1::String, s2::String)
  ccall((:labpos, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function labtyp(s1::String, s2::String)
  ccall((:labtyp, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function ldimg(s::String, iray::Vector{UInt16}, i1::Int64, i2::Int64)
  ccall((:ldimg, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt16}, Int32,
          Int32), s, iray, i1, i2)
end

function legbgd(i::Int64)
  ccall((:legbgd, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function legclr()
  ccall((:legclr, "libdislin_d.so"), Cvoid, ())
end

function legend(cbuf::Vector{UInt8}, i::Int64)
  ccall((:legend, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Int32), cbuf, i)
end

function legini(cbuf::Vector{UInt8}, i1::Int64, i2::Int64)
  ccall((:legini, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Int32, Int32), 
           cbuf, i1, i2)
end

function leglin(cbuf::Vector{UInt8}, s::String, i::Int64)
  ccall((:leglin, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}, Int32), 
           cbuf, s, i)
end

function legopt(x1::Float64, x2::Float64, x3::Float64)
  ccall((:legopt, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
          x1, x2, x3)
end

function legpat(i1::Int64, i2::Int64, i3::Int64, 
                i4::Int64, i5::Int64, i6::Int64)
  ccall((:legpat, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32, Int32, 
          Int32), i1, i2, i3, i4, i5, i6)
end

function legpos(i1::Int64, i2::Int64)
  ccall((:legpos, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function legsel(nray::Vector{Int32}, n::Int64)
  ccall((:legsel, "libdislin_d.so"), Cvoid, (Ptr{Int32}, Int32), nray, n)
end

function legtbl(i::Int64, s::String)
  ccall((:legtbl, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function legtit(s::String)
  ccall((:legtit, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function legtyp(s::String)
  ccall((:legtyp, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function legval(x::Float64, s::String)
  ccall((:legval, "libdislin_d.so"), Cvoid, (Float64, Ptr{UInt8}), x, s)
end

function lfttit()
  ccall((:lfttit, "libdislin_d.so"), Cvoid, ())
end

function licmod(s1::String, s2::String)
  ccall((:licmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function licpts(xv::Vector{Float64}, yv::Vector{Float64}, nx::Int64,
                ny::Int64, itmat::Array{Int32, 2}, wmat::Array{Float64, 2})
  imat = Array{Int32}(undef, nx, ny)
  xmat = Array{Float64}(undef, nx, ny)
  ccall((:licpts, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, Int32, 
          Int32, Ptr{Int32}, Ptr{Float64}), xv, yv, nx, ny, imat, xmat)
  transpose!(itmat, imat)
  transpose!(wmat, xmat)
  imat = 0
  xmat = 0
end

function light(s::String)
  ccall((:light, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function linclr(nray::Vector{Int32}, n::Int64)
  ccall((:linclr, "libdislin_d.so"), Cvoid, (Ptr{Int32}, Int32), nray, n)
end

function lincyc(i1::Int64, i2::Int64)
  ccall((:lincyc, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function line(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:line, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function linesp(x::Float64)
  ccall((:linesp, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function linfit(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64,
  s1::String)
  a = Cdouble[0]
  b = Cdouble[0]
  r = Cdouble[0]
  ccall((:linfit, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, Int32,
       Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{UInt8}), xray, yray, n, 
       a, b , r, s1);
  return a[1], b[1], r[1]
end

function linmod(s1::String, s2::String)
  ccall((:linmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function lintyp(i::Int64)
  ccall((:lintyp, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function linwid(i::Int64)
  ccall((:linwid, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function litmod(i::Int64, s::String)
  ccall((:litmod, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function litop3(i::Int64, x1::Float64, x2::Float64, x3::Float64, 
                s::String)
  ccall((:litop3, "libdislin_d.so"), Cvoid, (Int32, Float64, Float64, Float64, 
          Ptr{UInt8}), i, x1, x2, x3, s)
end

function litopt(i::Int64, x::Float64, s::String)
  ccall((:litopt, "libdislin_d.so"), Cvoid, (Int32, Float64, Ptr{UInt8}), 
          i, x, s)
end

function litpos(i::Int64, x1::Float64, x2::Float64, x3::Float64, 
                s::String)
  ccall((:litpos, "libdislin_d.so"), Cvoid, (Int32, Float64, Float64, Float64, 
          Ptr{UInt8}), i, x1, x2, x3, s)
end

function lncap(s::String)
  ccall((:lncap, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function lnjoin(s::String)
  ccall((:lnjoin, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function lnmlt(x::Float64)
  ccall((:lnmlt, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function logtic(s::String)
  ccall((:logtic, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function mapbas(s::String)
  ccall((:mapbas, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function mapfil(s1::String, s2::String)
  ccall((:mapfil, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function mapimg(s::String, x1::Float64, x2::Float64, x3::Float64,
                x4::Float64, x5::Float64, x6::Float64)
  ccall((:mapimg, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Float64, Float64,
          Float64, Float64, Float64, Float64), s, x1, x2, x3, x4, x5, x6)
end

function maplab(s1::String, s2::String)
  ccall((:maplab, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function maplev(s::String)
  ccall((:maplev, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function mapmod(s::String)
  ccall((:mapmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function mappol(x1::Float64, x2::Float64)
  ccall((:mappol, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end

function mapopt(s1::String, s2::String)
  ccall((:mapopt, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function mapref(x1::Float64, x2::Float64)
  ccall((:mapref, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end

function mapsph(x::Float64)
  ccall((:mapsph, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function marker(i::Int64)
  ccall((:marker, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function matop3(x1::Float64, x2::Float64, x3::Float64, s::String)
  ccall((:matop3, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64, 
          Ptr{UInt8}), x1, x2, x3, s)
end

function matopt(x::Float64, s::String)
  ccall((:matopt, "libdislin_d.so"), Cvoid, (Float64, Ptr{UInt8}), x, s)
end

function mdfmat(i1::Int64, i2::Int64, x::Float64)
  ccall((:mdfmat, "libdislin_d.so"), Cvoid, (Int32, Int32, Float64), i1, i2, x)
end

function messag(s::String, i1::Int64, i2::Int64)
  ccall((:messag, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Int32, Int32), 
          s, i1, i2)
end

function metafl(s::String)
  ccall((:metafl, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function mixalf()
  ccall((:mixalf, "libdislin_d.so"), Cvoid, ())
end

function mixleg()
  ccall((:mixleg, "libdislin_d.so"), Cvoid, ())
end

function mpaepl(i::Int64)
  ccall((:mpaepl, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function mplang(x::Float64)
  ccall((:mplang, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function mplclr(i1::Int64, i2::Int64)
  ccall((:mplclr, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function mplpos(i1::Int64, i2::Int64)
  ccall((:mplpos, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function mplsiz(i::Int64)
  ccall((:mplsiz, "libdislin_d.so"), Cvoid, (Int32,), i)
end
